--- a/AndroidUtils/src/main/res/values/strings.xml
+++ b/AndroidUtils/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">AndroidUtilsProject</string>
+    <string name="title_activity_main">Main Activity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_button">Execute Request</string>
+
 </resources>
