--- a/AndroidUtils/src/main/res/values/strings.xml
+++ b/AndroidUtils/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">AndroidUtilsProject</string>
     <string name="title_main_activity">Main Screen</string>
+    <string name="title_button_one">Button</string>
+    <string name="title_button_two">Button 2</string>
 
 </resources>
